--- a/src/main/resources/org/sonar/l10n/php/rules/magento2/M1.1.html
+++ b/src/main/resources/org/sonar/l10n/php/rules/magento2/M1.1.html
@@ -16,12 +16,14 @@
     Modifying arguments would make the function impure, which is discouraged in OOP as it reduces the reusability and reliability of functions.
 </p>
 
+<h3>Noncompliant code example</h3>
 <pre data-diff-id="2" data-diff-type="noncompliant">
 function updateUser(&$user) {  // Noncompliant
     $user['name'] = 'New Name';
 }
 </pre>
 
+<h3>Compliant solution</h3>
 <pre data-diff-id="1" data-diff-type="compliant">
 function updateUser($user) {      // Compiliant
     $newUser = $user;
