escapeOutput fixes ( added allowedMethods from docs ), readme fixes

--- a/src/main/resources/org/sonar/l10n/php/rules/magento2/M15.3.1.html
+++ b/src/main/resources/org/sonar/l10n/php/rules/magento2/M15.3.1.html
@@ -1,7 +1,7 @@
 <h2>Why is this an issue?</h2>
 <p>
     Follow <a href="https://developer.adobe.com/commerce/php/development/security/cross-site-scripting/">
-    XSS prevention strategies </a> guidelines for escaping output.
+    XSS prevention strategies</a> guidelines for escaping output.
 </p>
 <p>
     Output processing involves sanitizing strings that may have come from external data sources before using it to render views.
@@ -10,29 +10,39 @@
 
 <h3>Noncompliant code example</h3>
 <pre data-diff-id="2" data-diff-type="noncompliant">
-<?= __('Text to translate') ?>
+&lt;?= __('Text to translate') ?&gt;
 ...
-<?php echo $customer->getName() ?>
+&lt;?php echo $customer->getName() ?&gt;
 ...
-<div data-bind='settings: <?= $myJson ?>'></div>
+&lt;div data-bind='settings: &lt;?= $myJson ?&gt;'&gt;&lt;/div&gt;
 </pre>
 
 <h3>Compliant solution</h3>
 <pre data-diff-id="1" data-diff-type="compliant">
-<?= $escaper->escapeHtml(__('Text to translate')) ?>
+&lt;?= $escaper->escapeHtml(__('Text to translate')) ?&gt;
 ...
-<?php echo $escaper->escapeHtml($customer->getName()) ?>
+&lt;?php echo $escaper->escapeHtml($customer->getName()) ?&gt;
 ...
-<div data-bind='settings: <?= $escaper->escapeHtmlAttr($myJson) ?>'></div>
+&lt;div data-bind='settings: &lt;?= $escaper->escapeHtmlAttr($myJson) ?&gt;'&gt;&lt;/div&gt;
 </pre>
 
 
 <h3>Exceptions</h3>
+<ul>
+    <li>/* @noEscape */ before output. Output does not require escaping. Test is green.</li>
+    <li>/* @escapeNotVerified */ before output. Output escaping is not checked and should be verified. Test is green.</li>
+    <li>Methods which contain "html" in their names (for example echo $object->{suffix}Html{postfix}()).
+        Data is ready for the HTML output. Test is green.
+    </li>
+    <li>
+        AbstractBlock methods escapeHtml, escapeHtmlAttr, escapeUrl, escapeJs are allowed. Test is green.
+    </li>
+    <li>Type casting and php function count() are allowed (for example echo (int)$var, (bool)$var, count($var)). Test is green.</li>
+    <li>Primitives (for example echo 'some text', 1, 1.30). Test is green.</li>
+</ul>
 <p>
-    Lines that are marked with a /* noSonar */ comment
+    Lines that are marked with a <pre>/* noEscape */</pre> or <pre>/* @escapeNotVerified */</pre> comment
 </p>
 <pre>
-    <script>
-    let settings = <?= /* @noEscape */ $myJson ?> // Compliant by exception
-    </script>
+let settings = &lt;?= /* @noEscape */ $myJson ?&gt; // Compliant by exception
 </pre>
