rules documentation updates

--- a/src/main/resources/org/sonar/l10n/php/rules/magento2/M1.2.html
+++ b/src/main/resources/org/sonar/l10n/php/rules/magento2/M1.2.html
@@ -30,3 +30,13 @@ function doSomething() :string // compilant
 <pre>
 function __construct(){...} // Compliant by exception
 function __destruct(){...}  // Compliant by exception
+</pre>
+
+<h2>References</h2>
+<ul>
+    <li>
+        <a href="https://www.php.net/manual/en/language.types.declarations.php" target="_blank">
+            PHP Type declarations documentation
+        </a>
+    </li>
+</ul>
