--- a/src/main/resources/org/sonar/l10n/php/rules/magento2/M1.3.1.html
+++ b/src/main/resources/org/sonar/l10n/php/rules/magento2/M1.3.1.html
@@ -7,3 +7,12 @@
     PHP code becomes more robust when type hinting (argument types, return types) are added.
     With the declare(strict_types=1) added, there is less chance for bugs that related to type casting.
 </p>
+
+<h2>References</h2>
+<ul>
+    <li>
+        <a href="https://www.php.net/manual/en/language.types.declarations.php#language.types.declarations.strict" target="_blank">
+            PHP Type declarations documentation
+        </a>
+    </li>
+</ul>
