--- a/src/main/resources/org/sonar/l10n/php/rules/magento2/M15.3.1.html
+++ b/src/main/resources/org/sonar/l10n/php/rules/magento2/M15.3.1.html
@@ -1,6 +1,6 @@
 <h2>Why is this an issue?</h2>
 <p>
-    Follow <a href="https://developer.adobe.com/commerce/php/development/security/cross-site-scripting/">
+    Follow <a href="https://developer.adobe.com/commerce/php/development/security/cross-site-scripting/" target="_blank">
     XSS prevention strategies</a> guidelines for escaping output.
 </p>
 <p>
@@ -39,4 +39,13 @@
     </li>
     <li>Type casting and php function count() are allowed (for example echo (int)$var, (bool)$var, count($var)). Test is green.</li>
     <li>Primitives (for example echo 'some text', 1, 1.30). Test is green.</li>
+</ul>
+
+<h2>References</h2>
+<ul>
+    <li>
+        <a href="https://developer.adobe.com/commerce/php/development/security/cross-site-scripting/" target="_blank">
+            Cross-site scripting (XSS). Magento 2 documentation
+        </a>
+    </li>
 </ul>
