--- a/src/main/resources/org/sonar/l10n/php/rules/magento2/M2.3.2.html
+++ b/src/main/resources/org/sonar/l10n/php/rules/magento2/M2.3.2.html
@@ -1,5 +1,8 @@
+<h2>Why is this an issue?</h2>
 <p>
-    Events MUST NOT be triggered in constructors.
+    In Magento 2, triggering events within constructors is considered a bad practice.
+    When events are dispatched during object construction, it can lead to unpredictable behavior, potential dependency cycles and
+    Performance degradation during object initialization
 </p>
 
 <pre data-diff-id="2" data-diff-type="noncompliant">
@@ -10,3 +13,12 @@
     }
 
 </pre>
+
+<h2>References</h2>
+<ul>
+    <li>
+        <a href="https://developer.adobe.com/commerce/php/development/components/events-and-observers/" target="_blank">
+            Magento 2 Events and Observers Documentation
+        </a>
+    </li>
+</ul>
