--- a/src/main/resources/org/sonar/l10n/php/rules/magento2/M2.5.html
+++ b/src/main/resources/org/sonar/l10n/php/rules/magento2/M2.5.html
@@ -33,3 +33,13 @@ class MyClass {
     }
 }
 </pre>
+
+
+<h2>References</h2>
+<ul>
+    <li>
+        <a href="https://developer.adobe.com/commerce/php/development/components/dependency-injection/" target="_blank">
+            Configuring Dependency Injection
+        </a>
+    </li>
+</ul>
